# augment_rpc

./: .gitignore  centroids_output.csv  pyproject.toml  requirements.txt  visualize_centroids.py
config/: base.yml
notebook/: _explore_gt.ipynb  _explore_rpc_structure.ipynb
scripts/: ego_centric_view.py  frame_matching.py  hyperparam_visualize.py  plot_vehicle_tracks.py  visualize.py  web_visualizer.py  working_ego_centric_view.py
src/: datareader.py  radarproc.py
src/pipepine/: core.py  factory.py
src/processing/: association.py  clustering.py  datareader.py  groundtruth.py  imu.py  plot_vehicle_tracks.py  radarproc.py  transform.py  visualization_data_provider.py
src/track/: kalman_filter.py  staticmap.py  track.py
