[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carla_project"
version = "0.1.0"
description = "Carla visualizer and helper tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # "carla==0.9.16",
    # "matplotlib==3.10.7",
    # "numpy==2.3.5",
    # "pandas==2.3.3",
]

[tool.setuptools.packages.find]
where = ["src"] # This tells Python: "The code lives inside src"
