[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augment_rpc"
version = "0.1.0"
description = "Project for analyzing and processing data from Carla-NS3 Co-simulation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "matplotlib", "tqdm"]

[tool.setuptools.packages.find]
where = ["src"]
